# mcp-chart-generator

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py  test_simple.py  tools.py
.claude/: settings.json  settings.local.json
mcp_chart_generator/: __init__.py  server.py  tools.py
tests/: test_chart_generate.py  test_chart_management.py
tests/output/Simple_Test_Chart/: vega_lite_spec.json
